再次配置 弄了好久用yarn 但是 搞不掂啊  版本问题还是莫名其妙 所以还是用cnpm 现在开始正式 项目的开发

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <!-- 容器，将来通过 React 渲染得到的 虚拟DOM，会呈现到这个位置 -->
-  <div id="app"></div>
+  <div id="app" style="height: 100%;"></div>
 </body>
 
 </html>
